tests/NormalTests/paczka1/fuzzy1/14681577.err
Error in line 25: kSpectTXA9 S214 253,3
Error in line 23: HxmRDCM S214 59,7
Error in line 29: kSpectTXA9 S708 53,0
Error in line 37: elqBp2mvXN S708 269,52
Error in line 38: HxmRDCM S343 14,5
